fs-base/metadata/objects/Process_Instance__c.object
<CustomObject>
    <description>An instance of a process to display in the UI</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if process instance is visible</description>
        <inlineHelpText>Indicates if process instance is visible</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Key value pairs separated by newlines, used to configure the specific behaviour of the process</description>
        <inlineHelpText>Key value pairs separated by newlines, used to configure the specific behaviour of the process</inlineHelpText>
        <label>Additional Information</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date when this process instance should be hidden</description>
        <inlineHelpText>Date when this process instance should be hidden</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Display name of process instance</description>
        <inlineHelpText>Display name of process instance</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Display order for this process instance</description>
        <inlineHelpText>Display order for this process instance</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Name of process that this process instance is a view on</description>
        <inlineHelpText>Name of process that this process instance is a view on</inlineHelpText>
        <label>Process</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date when this process instance should be visible</description>
        <inlineHelpText>Date when this process instance should be visible</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Process Instance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Process Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>